* HTree::Lookup() was trying to find the entry .. through indexed search instead of linear search. Should fix #6305 * DirectoryIterator::FindEntry() now takes name length in account for name comparison. * cleanup

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39809 a95241bf-73f2-0310-859d-f6bbb57e9c96