src/add-ons/kernel/file_systems/ext2/DirectoryIterator.cpp
@@ -206,8 +206,8 @@ DirectoryIterator::Next()
 		TRACE("DirectoryIterator::Next() skipping entry %d %ld\n", entry->Length(), entry->InodeID());
 	} while (entry->Length() == 0 || entry->InodeID() == 0);
 
-	TRACE("DirectoryIterator::Next() entry->Length() %d entry->name %s\n",
-			entry->Length(), entry->name);
+	TRACE("DirectoryIterator::Next() entry->Length() %d entry->name %*s\n",
+			entry->Length(), entry->NameLength(), entry->name);
 
 	return B_OK;
 }
@@ -313,7 +313,7 @@ DirectoryIterator::FindEntry(const char* name, ino_t* _id)
 		size_t nameLength = EXT2_NAME_LENGTH;
 		status = Get(buffer, &nameLength, &id);
 		if (status == B_OK) {
-			if (strcmp(name, buffer) == 0) {
+			if (strncmp(name, buffer, nameLength) == 0) {
 				if (_id != NULL)
 					*_id = id;
 				return B_OK;
